--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -8,17 +8,17 @@ body {
 
 .container {
   display: flex;
+  align-items: center;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   min-height: 90vh;
 }
 
 .footer {
   font-family: Verdana, sans-serif;
-  color: #422a1d;
-  padding: 0.5rem 2rem;
   font-size: 0.8rem;
+  padding: 0.5rem 2rem;
+  color: #422a1d;
 }
 
 .footer a {
@@ -107,25 +107,16 @@ body {
 .inserta_texto {
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 1.5em;
-  left: 120px;
-  width: 338px;
-  height: 38px;
+  padding: 0.2rem 2rem;
   text-align: left;
-  text-indent: 120px;
   color: #3c2513;
-  border-top-width: 2px;
-  border-top-style: solid;
-  border-top-color: #cb7227;
-  border-right-width: 2px;
-  border-right-style: solid;
-  border-right-color: #cb7227;
-  border-bottom-width: 0px;
-  border-bottom-style: solid;
-  border-bottom-color: #cb7227;
-  border-left-width: 2px;
-  border-left-style: solid;
-  border-left-color: #cb7227;
-  background-repeat: no-repeat;
+  border: 0;
+  background-color: transparent;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
 }
 
 .inserta_texto:hover {
@@ -138,15 +129,13 @@ body {
 
 .inserta_comentario {
   font-family: Georgia, "Times New Roman", Times, serif;
-  font-size: 1.5em;
-  left: 120px;
-  width: 338px;
-  height: 140px;
+  font-size: 1.2em;
+  width: 85%;
+  padding: 0.5rem 2rem;
   text-align: left;
   color: #3c2513;
-  border: 2px solid #cb7227;
-  background-image: url(../imagenes/form_comentarios.png);
-  background-repeat: no-repeat;
+  border: 0;
+  background-color: transparent;
 }
 
 .inserta_comentario:hover {
@@ -167,9 +156,6 @@ body {
   margin-left: 10px;
   text-align: center;
   color: #3c2513;
-  border: 1px dotted #cb7227;
-  background-repeat: repeat-x;
-  background-position: bottom;
 }
 
 #contacto_form {
@@ -178,14 +164,34 @@ body {
   padding-left: 80px;
 }
 
-#nombre {
-  background-image: url(../imagenes/from_nombre.png);
+form td.input {
+  padding: 0 20px;
+  border: 3px solid #cb7227;
+  border-radius: 0.5rem;
+  background-color: #f8efd2;
 }
 
-#email {
-  background-image: url(../imagenes/from_email.png);
+form td.input:hover {
+  background-color: #ede2a3;
 }
 
-#telefono {
-  background-image: url(../imagenes/from_telefono.png);
+form label {
+  font-family: Verdana, sans-serif;
+  color: #3c2513;
+}
+
+form button {
+  font-family: Verdana, sans-serif;
+  font-size: 1.8rem;
+  padding: 0.2rem 2rem;
+  cursor: pointer;
+  color: #3c2513;
+  border: #cb7227 dashed 2px;
+  border-radius: 2rem;
+  background-color: #f69849;
+}
+
+form button:hover {
+  color: #f8efd2;
+  background-color: #9d5d26;
 }
